Changed the tabs to be position in the bottom and with better titles

--- a/app/pages/page4/page4.html
+++ b/app/pages/page4/page4.html
@@ -1,4 +1,3 @@
-
 <ion-navbar *navbar>
   <ion-title>
     Settings
@@ -6,5 +5,5 @@
 </ion-navbar>
 
 <ion-content class="page4">
-  <h1>Sample page</h1>
+  <h1>Sample Settings page</h1>
 </ion-content>
