--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,7 +1,5 @@
-
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Tab 1" tabIcon="pulse"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Tab 2" tabIcon="chatbubbles"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Tab 3" tabIcon="cog"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Tab 4" tabIcon="cog"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Dashboard" tabIcon="pulse"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Market" tabIcon="chatbubbles"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Settings" tabIcon="cog"></ion-tab>
 </ion-tabs>
