Changed the dashboard view

--- a/app/pages/page1/page1.html
+++ b/app/pages/page1/page1.html
@@ -3,13 +3,14 @@
 </ion-navbar>
 
 <ion-content padding class="page1">
-  <h2>Hello World!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>app/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-list>
+    <ion-item>
+      <ion-avatar item-left>
+        <img src="img/avatar.png">
+      </ion-avatar>
+      <h2>Finn</h2>
+      <h3>Don't Know What To Do!</h3>
+      <p>I've had a pretty messed up day. If we just...</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
