--- a/app/pages/page1/page1.html
+++ b/app/pages/page1/page1.html
@@ -1,16 +1,16 @@
 <ion-navbar *navbar>
-  <ion-title>Tab 1</ion-title>
+  <ion-title>Dashboard</ion-title>
 </ion-navbar>
 
 <ion-content padding class="page1">
   <ion-list>
-    <ion-item>
+    <ion-item *ngFor="#child of children">
       <ion-avatar item-left>
-        <img src="img/avatar.png">
+        <img src="{{ child.avatar }}">
       </ion-avatar>
-      <h2>Finn</h2>
-      <h3>Don't Know What To Do!</h3>
-      <p>I've had a pretty messed up day. If we just...</p>
+      <h2>{{ child.name }}</h2>
+      <h3>{{ child.balance | currency:'USD':true }}</h3>
+      <p>{{ child.completedTasks }} / {{ child.totalTasks }}</p>
     </ion-item>
   </ion-list>
 </ion-content>
