Added a buttom for adding a child

--- a/app/pages/page1/page1.html
+++ b/app/pages/page1/page1.html
@@ -13,4 +13,7 @@
       <p>{{ child.completedTasks }} / {{ child.totalTasks }}</p>
     </ion-item>
   </ion-list>
+  <button fab primary fab-bottom fab-center (click)="addChild()">
+    <ion-icon name='add'></ion-icon>
+  </button>
 </ion-content>
