--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Dashboard" tabIcon="pulse"></ion-tab>
+  <ion-tab [root]="childrenListPage" tabTitle="Dashboard" tabIcon="pulse"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Market" tabIcon="chatbubbles"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Settings" tabIcon="cog"></ion-tab>
 </ion-tabs>
