Added the click to a child dashboard:

--- a/app/pages/childDashboard/index.html
+++ b/app/pages/childDashboard/index.html
@@ -1,10 +1,10 @@
 
 <ion-navbar *navbar>
   <ion-title>
-    Tab 3
+    {{ child.name }}
   </ion-title>
 </ion-navbar>
 
 <ion-content class="page3">
-
+  This is the dashboard of {{ child.name }}
 </ion-content>
