--- a/app/pages/childDashboard/index.html
+++ b/app/pages/childDashboard/index.html
@@ -6,5 +6,12 @@
 </ion-navbar>
 
 <ion-content class="page3">
-  This is the dashboard of {{ child.name }}
+  <ion-card>
+    <ion-card-header>
+      {{ child.name }}
+    </ion-card-header>
+    <ion-card-content>
+        <ion-item>Total Tasks: {{ child.totalTasks }}</ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
