Change the second page to a notifications page

--- a/app/pages/notifications/index.html
+++ b/app/pages/notifications/index.html
@@ -1,10 +1,9 @@
-
 <ion-navbar *navbar>
   <ion-title>
-    Tab 2
+    Notifications
   </ion-title>
 </ion-navbar>
 
 <ion-content class="page2">
-
+  Notifications
 </ion-content>
