Added better icons for the sliding options

--- a/app/pages/childrenList/index.html
+++ b/app/pages/childrenList/index.html
@@ -15,12 +15,12 @@
       </ion-item>
       <ion-item-options>
         <button primary>
-          <ion-icon name="text"></ion-icon>
-          Text
+          <ion-icon name="create"></ion-icon>
+          Edit
         </button>
-        <button secondary>
-          <ion-icon name="call"></ion-icon>
-          Call
+        <button danger>
+          <ion-icon name="trash"></ion-icon>
+          Remove
         </button>
       </ion-item-options>
     </ion-item-sliding>
