reorganized and updated the modals

--- a/app/pages/childrenList/index.html
+++ b/app/pages/childrenList/index.html
@@ -35,7 +35,7 @@
         <button (click)="showDeppositModal(child)" clear item-right>
           <ion-icon name='card'></ion-icon>
         </button>
-        <button (click)="showAddTaskModal(child)" clear item-right>
+        <button (click)="showTaskModal(child)" clear item-right>
           <ion-icon name='add'></ion-icon>
         </button>
       </ion-item>
