--- a/app/pages/settings/index.html
+++ b/app/pages/settings/index.html
@@ -7,7 +7,9 @@
 <ion-content class="page4">
   <ion-list>
     <ion-item>
-      Add Child
+      <button icon="add">
+        Add Child
+      </button>
     </ion-item>
   </ion-list>
 </ion-content>
