Added an item to the menu

--- a/app/pages/settings/index.html
+++ b/app/pages/settings/index.html
@@ -5,5 +5,9 @@
 </ion-navbar>
 
 <ion-content class="page4">
-  <h1>Sample Settings page</h1>
+  <ion-list>
+    <ion-item>
+      Add Child
+    </ion-item>
+  </ion-list>
 </ion-content>
