Updated the title of the Money Management modal

--- a/app/modals/depositModal/index.html
+++ b/app/modals/depositModal/index.html
@@ -1,7 +1,7 @@
 <ion-content padding>
   <ion-list>
     <ion-item>
-      Deposit Money to
+      Manage Money for {{ child.name }}
     </ion-item>
     <ion-item>
       <input type="number" [(ngModel)]="amount" />
