Added a way to pass the child to the task modal

--- a/app/modals/taskModal/index.html
+++ b/app/modals/taskModal/index.html
@@ -1,7 +1,7 @@
 <ion-content padding>
   <ion-list>
     <ion-item>
-      Manage Child Tasks
+      Tasks Management for {{ child.name }}
     </ion-item>
   </ion-list>
   <button block (click)="closeModal()" danger>Dismiss</button>
