Added the add child functionality to the settings page

--- a/app/pages/settings/index.html
+++ b/app/pages/settings/index.html
@@ -7,7 +7,7 @@
 <ion-content class="page4">
   <ion-list>
     <ion-item>
-      <button icon="add">
+      <button icon="add" (click)="addChild()">
         Add Child
      </button>
     </ion-item>
