--- a/app/pages/settings/index.html
+++ b/app/pages/settings/index.html
@@ -9,7 +9,11 @@
     <ion-item>
       <button icon="add" (click)="addChild()">
         Add Child
-     </button>
+      </button>
+    </ion-item>
+    <ion-item>
+      <ion-label>Show Tasks in Dashboard</ion-label>
+      <ion-toggle primary checked="settings.showTasks"></ion-toggle>
     </ion-item>
   </ion-list>
 </ion-content>
