Fixed issue with the toggle binding in the settings page

--- a/app/pages/settings/index.html
+++ b/app/pages/settings/index.html
@@ -13,7 +13,7 @@
     </ion-item>
     <ion-item>
       <ion-label>Show Tasks in Dashboard</ion-label>
-      <ion-toggle primary checked="settings.showTasks"></ion-toggle>
+      <ion-toggle primary [(ngModel)]="settings.showTasks"></ion-toggle>
     </ion-item>
   </ion-list>
 </ion-content>
