--- a/app/pages/childrenList/index.html
+++ b/app/pages/childrenList/index.html
@@ -26,8 +26,8 @@
             Money
           </button>
         </ion-item-options>
-      </ion-item-sliding>      
-      <ion-item *ngFor="#task of child.tasks | slice:0:2">
+      </ion-item-sliding>
+      <ion-item [hidden]="!settings.showTasks" *ngFor="#task of child.tasks | slice:0:2">
         <ion-label>{{ task.title }}</ion-label>
         <ion-checkbox [checked]="task.completed">{{ task.title }}</ion-checkbox>
       </ion-item>
