--- a/app/pages/settings/index.html
+++ b/app/pages/settings/index.html
@@ -15,5 +15,13 @@
       <ion-label>Show Tasks in Dashboard</ion-label>
       <ion-toggle primary [(ngModel)]="settings.showTasks"></ion-toggle>
     </ion-item>
+    <ion-item>
+      <ion-label>Show Transactions in Dashboard</ion-label>
+      <ion-toggle primary [(ngModel)]="settings.showTransactions"></ion-toggle>
+    </ion-item>
+    <ion-item>
+      <ion-label>Show Notifications in Dashboard</ion-label>
+      <ion-toggle primary [(ngModel)]="settings.showNotifications"></ion-toggle>
+    </ion-item>
   </ion-list>
 </ion-content>
