Removed the slice on the transactions card

--- a/app/pages/childDashboard/index.html
+++ b/app/pages/childDashboard/index.html
@@ -19,7 +19,7 @@
     <ion-card-header>
       Transactions
     </ion-card-header>
-    <ion-item *ngFor="#transaction of child.transactions | slice:0:2">
+    <ion-item *ngFor="#transaction of child.transactions">
       {{ transaction.description }}
       <ion-note item-right>
         {{ transaction.amount | currency:'USD':true }}
