Added synchronization with a remote database

--- a/app/pages/notifications/index.html
+++ b/app/pages/notifications/index.html
@@ -5,7 +5,7 @@
 </ion-navbar>
 
 <ion-content class="page2">
-  <ion-card *ngFor="#notification of notifications">
+  <ion-card *ngFor="#notification of docs">
     <ion-card-header>
       {{ notification.title }}
     </ion-card-header>
